--- a/landingpage/GG/src/gg/AboutUs.form
+++ b/landingpage/GG/src/gg/AboutUs.form
@@ -163,7 +163,7 @@
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Student.admin\Downloads\about.jpg"/>
+          <Image iconType="3" name="/img/about.jpg"/>
         </Property>
       </Properties>
       <Constraints>
